--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -1,5 +1,6 @@
 {% extends "polls/base.html"%}
 {% block content %}
+<br><br><h1>Vote Results</h1><hr>
 <h1>{{ question.question_text }}</h1>
 
 <ul>
