--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,4 +1,8 @@
+{% extends "polls/base.html" %}
+
+{%block content%}
 {% if latest_question_list %}
+	<br><br><h1>List of Questions</h1>
     <ul>
     {% for question in latest_question_list %}
         <li><a href="{% url 'polls:detail'  question.id %}">{{ question.question_text }}</a></li>
@@ -7,3 +11,4 @@
 {% else %}
     <p>No polls are available.</p>
 {% endif %}
+{% endblock %}
